--- a/apps/page/templates/page/home_page.html
+++ b/apps/page/templates/page/home_page.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
 <head>
@@ -5,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MD Clone</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
     <!-- NAVBAR -->
@@ -361,8 +362,6 @@
 
                 </article>
 
-
-
                 <article class="row mb-3">
                     <div class="col-sm-8">
                         <div>
@@ -426,6 +425,7 @@
             </aside>
         </div>
     </section>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
