3. Register a new user

--- a/apps/page/templates/page/_navbar.html
+++ b/apps/page/templates/page/_navbar.html
@@ -16,7 +16,7 @@
                         Membership
                     </a>
                     <a class="nav-link" href="#">Write</a>
-                    <a class="nav-link" href="#">Sign In</a>
+                    <a class="nav-link" href="{% url 'accounts:user_register' %}">Sign Up</a>
                     <a class="nav-link btn btn-dark text-light px-3 rounded-pill ms-3">Get Started</a>
                 </div>
             </div>
