4. Showing error messages to unsuccessful registered user

--- a/apps/accounts/templates/accounts/register.html
+++ b/apps/accounts/templates/accounts/register.html
@@ -9,6 +9,9 @@
     <div class="row">
 
         <div class="col-sm-6 offset-sm-3">
+        	
+        	{% include 'accounts/_messages.html' %}
+
 			<h1>Register</h1><br>
 			<form method="POST">
 
