--- a/apps/page/templates/page/base.html
+++ b/apps/page/templates/page/base.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
+    <!-- MESSAGES -->
+    {% include 'page/_messages.html' %}
+    <!-- MESSAGES END -->
+
     <!-- NAVBAR -->
     {% include 'page/_navbar.html' %}
     <!-- NAVBAR END -->
