--- a/apps/page/templates/page/_navbar.html
+++ b/apps/page/templates/page/_navbar.html
@@ -17,6 +17,8 @@
                     </a>
                     <a class="nav-link" href="#">Write</a>
                     <a class="nav-link" href="{% url 'accounts:user_register' %}">Sign Up</a>
+                    <a class="nav-link" href="{% url 'accounts:user_login' %}">Sign In</a>
+                    <a class="nav-link" href="{% url 'accounts:user_logout' %}">Sign Out</a>
                     <a class="nav-link btn btn-dark text-light px-3 rounded-pill ms-3">Get Started</a>
                 </div>
             </div>
