--- a/apps/page/templates/page/_navbar.html
+++ b/apps/page/templates/page/_navbar.html
@@ -12,14 +12,18 @@
                     <a class="nav-link" aria-current="page" href="#">
                         Our story
                     </a>
+                    {% if request.user.is_authenticated %}
                     <a class="nav-link" href="#">
                         Membership
                     </a>
                     <a class="nav-link" href="#">Write</a>
+                    <a class="nav-link" href="{% url 'accounts:user_logout' %}">Sign Out</a>
+                    {% else %}
                     <a class="nav-link" href="{% url 'accounts:user_register' %}">Sign Up</a>
                     <a class="nav-link" href="{% url 'accounts:user_login' %}">Sign In</a>
-                    <a class="nav-link" href="{% url 'accounts:user_logout' %}">Sign Out</a>
-                    <a class="nav-link btn btn-dark text-light px-3 rounded-pill ms-3">Get Started</a>
+                    <a class="nav-link btn btn-dark text-light px-3 rounded-pill ms-3"
+                        href="{% url 'accounts:user_login' %}">Get Started</a>
+                    {% endif %}
                 </div>
             </div>
         </div>
