--- a/apps/page/templates/page/_navbar.html
+++ b/apps/page/templates/page/_navbar.html
@@ -18,6 +18,7 @@
                     </a>
                     <a class="nav-link" href="#">Write</a>
                     <a class="nav-link" href="{% url 'accounts:user_logout' %}">Sign Out</a>
+                    <a class="nav-link"><span style="color:black;">{{user.username|title}}</span></a>
                     {% else %}
                     <a class="nav-link" href="{% url 'accounts:user_register' %}">Sign Up</a>
                     <a class="nav-link" href="{% url 'accounts:user_login' %}">Sign In</a>
