10. Modified navbar in the footer

--- a/apps/page/templates/page/_footer.html
+++ b/apps/page/templates/page/_footer.html
@@ -1,24 +1,30 @@
 {% load static %}
 
-    <nav class="navbar navbar-expand-lg bg-dark border-bottom border-dark">
+    <nav class="navbar navbar-expand-lg bg-warning border-bottom border-dark">
         <div class="container py-2">
-            <a class="navbar-brand" href="#" style="color:#FFC107;">Metaskills MD Clone</a>
+            <a class="navbar-brand" href="#">Metaskills MD Clone</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-auto">
-                    <a class="nav-link footer" aria-current="page" href="#"  style="color:#FFC107;">
+                    <a class="nav-link" aria-current="page" href="#">
                         Our story
                     </a>
-                    <a class="nav-link footer" href="#" style="color:#FFC107;">
+                    {% if request.user.is_authenticated %}
+                    <a class="nav-link" href="#">
                         Membership
                     </a>
-                    <a class="nav-link footer" href="#" style="color:#FFC107;">Write</a>
-                    <a class="nav-link footer" href="#" style="color:#FFC107;">Sign In</a>
-                    <a class="nav-link btn btn-warning text-light px-3 rounded-pill ms-3">
-                        <span  style="color:black;">Get Started</span></a>
+                    <a class="nav-link" href="#">Write</a>
+                    <a class="nav-link" href="{% url 'accounts:user_logout' %}">Sign Out</a>
+                    <a class="nav-link"><span style="color:black;">{{user.username|title}}</span></a>
+                    {% else %}
+                    <a class="nav-link" href="{% url 'accounts:user_register' %}">Sign Up</a>
+                    <a class="nav-link" href="{% url 'accounts:user_login' %}">Sign In</a>
+                    <a class="nav-link btn btn-dark text-light px-3 rounded-pill ms-3"
+                        href="{% url 'accounts:user_login' %}">Get Started</a>
+                    {% endif %}
                 </div>
             </div>
         </div>
